# labs-uni

./: .gitignore  README.md  file_task_2  file_task_3  file_task_4  file_text_task-2.c  sandbox.c  struct_task_1.c
10lab/: byte_fields_1.c  sandbox.c  struct_squares.c  struct_task_1.c  struct_task_2.c  validators.c  validators.h
10lab/output/: byte_fields_1.c
11lab/: CMakeLists.txt  arithmetic_expressions.c  arithmetic_expressions.h  integer_stack.c  integer_stack.h  main.c  parse_&_calculate_expressions.c  parse_&_calculate_expressions.h  sort_third_stack.c  sort_third_stack.h  user_choice.c  user_choice.h  validators.c  validators.h
12lab/: CMakeLists.txt  deep_compare.c  deep_compare.h  deque_actions.c  deque_actions.h  main.c  queue_actions.c  queue_actions.h  queue_identity.c  queue_identity.h  serve_user.c  serve_user.h  validators.c
13lab/: CMakeLists.txt  default_tree.c  default_tree.h  find_repeats.c  main.c  tree_functions.c  tree_functions.h  tree_lobby.c  tree_lobby.h  validators.c  validators.h
8lab/: file_task_1.c  file_task_2.c  file_task_3.c  file_task_4.c
9lab/: file_text_task-1.c  file_text_task-2.c  file_text_task-3.c
9lab/output/: file_text_task-1  file_text_task-2  tr1.txt  try.txt  try1.txt  афвы.txt
C++/LABS/lab4/: CMakeLists.txt
C++/LABS/lab4/exceptions/include/: FileException.h  InputException.h
C++/LABS/lab4/exceptions/src/: ContainerException.cpp  Exception.cpp
C++/LABS/lab4/include/: Exceptions.h  InputUtils.h  Ring.h  RingNote.h  Student.h
C++/LABS/lab4/output/: laba
C++/LABS/lab4/output/main.dSYM/Contents/Resources/DWARF/: main
C++/LABS/lab4/src/: Exceptions.cpp  InputUtils.cpp  Menu.cpp  Ring.cpp  Student.cpp
C++/LABS/lab5/lab5_example/: CMakeLists.txt  README.md
C++/LABS/lab5/lab5_example/exceptions/include/: ContainerException.hpp  Exception.hpp
C++/LABS/lab5/lab5_example/exceptions/src/: ContainerException.cpp  FileException.cpp
C++/LABS/lab5/lab5_example/main/: headre.hpp  main.cpp
C++/LABS/lab5/lab5_example/models/include/: CommissionMember.hpp  Human.hpp  Teacher.hpp  TeacherCommissionMember.hpp
C++/LABS/lab5/lab5_example/models/src/: CommissionMember.cpp  Human.cpp  Teacher.cpp  TeacherCommissionMember.cpp
C++/LABS/lab5/lab5_example/templates/include/: Deque.hpp  Deque.tpp
C++/LABS/lab6/: CMakeLists.txt  main.cpp  quick_start.txt
C++/LABS/lab6/exceptions/include/: ContainerException.h  Exception.h
C++/LABS/lab6/exceptions/src/: FileException.cpp  InputException.cpp
C++/LABS/lab6/include/: File.h  Iterator.h  Menu.h  OneWayQueue.h  Shkolnik.h  Uchaschiysya.h
C++/LABS/lab6/include/containers/: Ring.h
C++/LABS/lab6/include/files/: BinaryFile.h  File.h  TextFile.h
C++/LABS/lab6/include/models/: Shkolnik.h  Student.h  Uchaschiysya.h
C++/LABS/lab6/src/: File.cpp  Menu.cpp  Ring.cpp  Shkolnik.cpp  Uchaschiysya.cpp
C++/LABS/lab6/src/files/: BinaryFile.tpp  File.cpp  TextFile.tpp
C++/LABS/lab6/src/models/: Shkolnik.cpp  Student.cpp  Uchaschiysya.cpp
C++/LABS/lab6/src/utils/: InputUtils.cpp
C++/LABS/lab6/text_file/: ring.txt
C++/LABS/lab7/: CMakeLists.txt  class_diagram_lab7.puml  quick_start.txt
C++/LABS/lab7/include/: Exceptions.h  InputUtils.h  Ring.h  RingNote.h
C++/LABS/lab7/src/: Menu.cpp  Ring.cpp  Student.cpp
C++/lab1/: CMakeLists.txt  (+1 more)
hash-table/: hashmap_functions.c  hashmap_functions.h  main.c  validators.h
output/: file_text_task-2  struct_task_1  try.txt
(+331 files in other folders)
